src/objects/ACED_Delivery_Actuals__c.object
<CustomObject>
    <fields>
        <fullName>Attribute__c</fullName>
        <formula>SUBSTITUTE(
If( Delivery__r.StandAlone_Asset__c !=null, Delivery__r.StandAlone_Asset__r.Channel__r.Actual_Attribute__c, Delivery__r.Activity__r.Channel__r.Actual_Attribute__c)
, &apos;#&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a helptext for Attribute</inlineHelpText>
        <label>Attribute</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Attribute_Upsert__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is a helptext for Delivery Attribute Upsert</inlineHelpText>
        <label>Delivery Attribute Upsert</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <inlineHelpText>This is a helptext for Delivery</inlineHelpText>
        <label>Delivery</label>
        <referenceTo>ACED_Deliveries__c</referenceTo>
        <relationshipLabel>Delivery Actuals</relationshipLabel>
        <relationshipName>Delivery_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Month_F__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp; Id , text(Month__c),&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a helptext for Month</inlineHelpText>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <inlineHelpText>This is a helptext for Month</inlineHelpText>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is a helptext for Value</inlineHelpText>
        <label>Value</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Delivery Actuals</label>
    <nameField>
        <displayFormat>DA-{00000}</displayFormat>
        <label>Delivery  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>